feat : security config 변경